--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ configurations {
   provided
 }
 
-version = "0.1.0"
+version = "0.0.1"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -89,7 +89,7 @@ Gem::Specification.new do |spec|
   spec.version       = "${project.version}"
   spec.authors       = ["Mikami, Takeshi"]
   spec.summary       = %[Sparql input plugin for Embulk]
-  spec.description   = %[Loads records from Sparql.]
+  spec.description   = %[Loads records by Sparql.]
   spec.email         = ["takeshi.mikami@gmail.com"]
   spec.licenses      = ["MIT"]
   spec.homepage      = "https://github.com/takemikami/embulk-input-sparql"
